fixed collapsed group margin

--- a/src/scss/components/_board-group.scss
+++ b/src/scss/components/_board-group.scss
@@ -240,8 +240,12 @@
 			background-color: white;
 
 			&.group-collapsed {
-				grid-template-columns: 8px 6px 322px;
+				grid-template-columns: 32px 6px 322px;
 				border-inline-end: 1px solid $divider-clr;
+
+				@include for-narrow-layout {
+					grid-template-columns: 8px 6px 322px;
+				}
 
 				.collapse-border {
 					display: block;
